# openFrameworks-clion

./: .gitignore  .project_name  CMakeLists.txt  Makefile  README.md  config.make  oftest.qbs  rename_project.sh
cmake/: FindGStreamer.cmake  addons.cmake  linux64.cmake
src/: ofApp.cpp  ofApp.h
